Chapter05/external-service.yaml
apiVersion: v1
kind: Service
metadata:
# 서비스 이름은 엔드포인트 오브젝트와 같아야 한다.
  name: external-service 
  # 이 서비스에는 셀렉터가 정의되어 있지 않다.
spec:
  ports:
  - port: 80
