Chapter05/kubia-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  type: LoadBalancer # 로드밸런서 유형으로 생성한다.
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
